# szachy

./: CMakeLists.txt
szachyCMake/: CMakeLists.txt  bot.c  bot.h  magic_numbers.h
szachyCMake/boty/: bot1.c  bot1.h  boty.c  boty.h
szachyCMake/header/: application.h  board.h  chessPieces.h  game.h  input.h  interface.h  linkedList.h  linuxTerminal.h  magicBitboard.h  window.h
szachyCMake/source/: application.c  board.c  chessPieces.c  game.c  input.c  interface.c  linkedList.c  linuxTerminal.c  magicBitboard.c  main.c  window.c
